examples/kraken-example/public/templates/errors/http_500.int
from errors import render
render(500, url, err)
